--- a/examples/inseq_tutorial.ipynb
+++ b/examples/inseq_tutorial.ipynb
@@ -1116,21 +1116,23 @@
     "\n",
     "### Contrastive attribution with different context\n",
     "\n",
-    "While `contrast_targets` allows us to compute the *difference between two predictions given same context*, `contrast_sources` and `contrast_target_prefixes` can be instead used to compute the *difference for the same prediction given different contexts*. This is useful to analyze how the model behavior changes when presented with different inputs, and can be used to analyze the effect of different prefixes on the generation of the same target sequence.\n",
+    "While `contrast_targets` allows us to compute the *difference between two predictions given same context*, it can also be used alongsides `contrast_sources` to compute the *difference for the same prediction given different contexts*. This is useful to analyze how the model behavior changes when presented with different inputs, and can be used to analyze the effect of different prefixes on the generation of the same target sequence.\n",
     "\n",
     "In this example, we'll use a multilingual MT model to showcase the difference in probabilities given additional context:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/gsarti/.cache/pypoetry/virtualenvs/inseq-PzwjmCYf-py3.9/lib/python3.9/site-packages/transformers/generation/utils.py:1349: UserWarning: Using `max_length`'s default (200) to control the generation length. This behaviour is deprecated and will be removed from the config in v5 of Transformers -- we recommend using `max_new_tokens` to control the maximum length of the generation.\n",
+      "/home/gsarti/.cache/pypoetry/virtualenvs/inseq-PzwjmCYf-py3.9/lib/python3.9/site-packages/transformers/generation/utils.py:1270: UserWarning: You have modified the pretrained model configuration to control generation. This is a deprecated strategy to control generation and will be removed soon, in a future version. Please use a generation configuration file (see https://huggingface.co/docs/transformers/main_classes/text_generation )\n",
+      "  warnings.warn(\n",
+      "/home/gsarti/.cache/pypoetry/virtualenvs/inseq-PzwjmCYf-py3.9/lib/python3.9/site-packages/transformers/generation/utils.py:1369: UserWarning: Using `max_length`'s default (200) to control the generation length. This behaviour is deprecated and will be removed from the config in v5 of Transformers -- we recommend using `max_new_tokens` to control the maximum length of the generation.\n",
       "  warnings.warn(\n"
      ]
     },
@@ -1138,7 +1140,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Generation without context: ['Sapete già quando tornerete?']\n",
+      "Generation without context: ['Sapete già quando tornerete?']\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Provided alignments do not cover all 8 tokens from the original sequence.\n",
+      "Filling missing position with right-aligned 1:1 position alignments.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Generation with context: [\"Grazie per l'aiuto, amico, mi hai davvero salvato la vita. Sapete già quando tornerete?\"]\n"
      ]
     },
@@ -1146,7 +1162,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Attributing with dummy...: 100%|██████████| 9/9 [00:00<00:00, 15.78it/s]\n"
+      "Attributing with dummy...: 100%|██████████| 9/9 [00:00<00:00, 15.59it/s]\n"
      ]
     },
     {
@@ -1154,11 +1170,11 @@
       "text/html": [
        "<br/><b>0th instance:</b><br/>\n",
        "<html>\n",
-       "<div id=\"cgchqjjfgyqpesejzqor_viz_container\">\n",
-       "    <div id=\"cgchqjjfgyqpesejzqor_content\" style=\"padding:15px;border-style:solid;margin:5px;\">\n",
-       "        <div id = \"cgchqjjfgyqpesejzqor_saliency_plot_container\" class=\"cgchqjjfgyqpesejzqor_viz_container\" style=\"display:block\">\n",
+       "<div id=\"jprrjeoajqpnsrahjfkf_viz_container\">\n",
+       "    <div id=\"jprrjeoajqpnsrahjfkf_content\" style=\"padding:15px;border-style:solid;margin:5px;\">\n",
+       "        <div id = \"jprrjeoajqpnsrahjfkf_saliency_plot_container\" class=\"jprrjeoajqpnsrahjfkf_viz_container\" style=\"display:block\">\n",
        "            \n",
-       "<div id=\"yiccwpusnzjovqwpsbfh_saliency_plot\" class=\"yiccwpusnzjovqwpsbfh_viz_content\">\n",
+       "<div id=\"evpxmqhjjhszbiryjbnq_saliency_plot\" class=\"evpxmqhjjhszbiryjbnq_viz_content\">\n",
        "    <div style=\"margin:5px;font-family:sans-serif;font-weight:bold;\">\n",
        "        <span style=\"font-size: 20px;\">Target Saliency Heatmap</span>\n",
        "        <br>\n",
@@ -1168,7 +1184,7 @@
        "<table border=\"1\" cellpadding=\"5\" cellspacing=\"5\"\n",
        "    style=\"overflow-x:scroll;display:block;\">\n",
        "    <tr><th></th>\n",
-       "<th>it_IT</th><th>▁Sai</th><th>▁già</th><th>▁quando</th><th>▁torne</th><th>rai</th><th>?</th><th>&lt;/s&gt;</th></tr><tr style=\"outline: thin solid\"><th><b>pcxmi</b></th><th><b>-8.093</b></th><th><b>2.096</b></th><th>-0.214</th><th>0.007</th><th>0.158</th><th>0.044</th><th>-0.068</th><th>-0.02</th><tr style=\"outline: thin solid\"><th><b>probability</b></th><th>0.0</th><th>0.02</th><th><b>0.834</b></th><th><b>0.927</b></th><th>0.475</th><th><b>0.93</b></th><th><b>0.645</b></th><th><b>0.897</b></th></table>\n",
+       "<th>. → it_IT</th><th>▁Sai</th><th>▁già</th><th>▁quando</th><th>▁torne</th><th>rai</th><th>?</th><th>&lt;/s&gt;</th></tr><tr style=\"outline: thin solid\"><th><b>pcxmi</b></th><th><b>10.656</b></th><th><b>2.602</b></th><th>-0.259</th><th>-0.008</th><th>-0.046</th><th>0.036</th><th>0.072</th><th>-0.013</th><tr style=\"outline: thin solid\"><th><b>probability</b></th><th>0.0</th><th>0.02</th><th><b>0.834</b></th><th><b>0.927</b></th><th>0.475</th><th><b>0.93</b></th><th><b>0.645</b></th><th><b>0.897</b></th></table>\n",
        "</div>\n",
        "\n",
        "        </div>\n",
@@ -1205,7 +1221,7 @@
     "    source_without_context,\n",
     "    \"Sai già quando tornerai?\",\n",
     "    contrast_sources=source_with_context,\n",
-    "    contrast_target_prefixes=\"Grazie per il tuo aiuto, mi hai davvero salvato la vita.\",\n",
+    "    contrast_targets=\"Grazie per il tuo aiuto, mi hai davvero salvato la vita. Sai già quando tornerai?\",\n",
     "    attribute_target=True,\n",
     "    # We also visualize the score used as target using the same function as step score\n",
     "    step_scores=[\"pcxmi\", \"probability\"]\n",
@@ -1219,7 +1235,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The high value of P-CXMI step score for `Sai` here points to the fact that given the full context, the model is twice as likely to predict `Sai` rather than other options.\n",
+    "By default tokens in the contrastive target are right-aligned to match the end of the original one. In this case, the very high value of P-CXMI step score for the language token `it_IT` is not very meaningful, as it would not be produced naturally by the model. However, `Sai` also has a high score here, pointing to the fact that given the full context, the model is more than twice as likely to predict `Sai` rather than other options. This is reasonable, as the context provides the model with lexical cues like `tuo`, `hai` pointing to an informal register (i.e. `Sai` vs. the original formal `Sa`). Note that the informal `tornerai` is not picked up by P-CXMI as `Sai` is an intra-sentence cue that is present both in the contextless and the contextual cases.\n",
     "\n",
     "### Providing custom alignments for contrastive targets\n",
     "\n",
