adjust make commands

--- a/examples/inseq_tutorial.ipynb
+++ b/examples/inseq_tutorial.ipynb
@@ -170,7 +170,7 @@
    "source": [
     "import inseq\n",
     "\n",
-    "# Load the model Helsinki-NLP/opus-mt-en-fr (6-layer encoder-decoder transformer) from the \n",
+    "# Load the model Helsinki-NLP/opus-mt-en-fr (6-layer encoder-decoder transformer) from the\n",
     "# Huggingface Hub and hook it with the Input X Gradient feature attribution method\n",
     "model = inseq.load_model(\"Helsinki-NLP/opus-mt-en-it\", \"input_x_gradient\")\n",
     "\n",
@@ -180,7 +180,7 @@
     "out = model.attribute(\n",
     "    input_texts=\"Hello everyone, hope you're enjoying the tutorial!\",\n",
     "    attribute_target=True,\n",
-    "    step_scores=[\"probability\"]\n",
+    "    step_scores=[\"probability\"],\n",
     ")\n",
     "# Visualize the attributions and step scores\n",
     "out.show()"
@@ -349,9 +349,7 @@
    ],
    "source": [
     "out = model.attribute(\n",
-    "    input_texts=\"Hello everyone, hope you're enjoying the tutorial!\",\n",
-    "    attribute_target=True,\n",
-    "    method=\"attention\"\n",
+    "    input_texts=\"Hello everyone, hope you're enjoying the tutorial!\", attribute_target=True, method=\"attention\"\n",
     ")\n",
     "# out[0] is a shortcut for out.sequence_attributions[0]\n",
     "out[0].source_attributions.shape"
@@ -535,10 +533,10 @@
    ],
    "source": [
     "# Gets the mean weights of the first three attention heads only, no normalization\n",
-    "# do_post_aggregation_checks=False is needed since the output has >2 dimensions and \n",
+    "# do_post_aggregation_checks=False is needed since the output has >2 dimensions and\n",
     "# could not be visualized\n",
     "aggregated_heads_seq_attr_out = out[0].aggregate(\n",
-    "    \"mean\", select_idx=(0,3), normalize=False, do_post_aggregation_checks=False\n",
+    "    \"mean\", select_idx=(0, 3), normalize=False, do_post_aggregation_checks=False\n",
     ")\n",
     "\n",
     "# (source_len, target_len, num_layers)\n",
@@ -726,7 +724,7 @@
     "    \"Domanda: Quanti studenti hanno partecipato alle LCL nel 2023?\"\n",
     ")\n",
     "\n",
-    "qa_model =  inseq.load_model(\"it5/it5-base-question-answering\", \"input_x_gradient\")\n",
+    "qa_model = inseq.load_model(\"it5/it5-base-question-answering\", \"input_x_gradient\")\n",
     "out = qa_model.attribute(question, attribute_target=True, step_scores=[\"probability\"])\n",
     "\n",
     "# Aggregate only source tokens, leave target tokens as they are\n",
@@ -1097,7 +1095,7 @@
     "    contrast_targets=\"Ho salutato la manager\",\n",
     "    attribute_target=True,\n",
     "    # We also visualize the score used as target using the same function as step score\n",
-    "    step_scores=[\"contrast_prob_diff\"]\n",
+    "    step_scores=[\"contrast_prob_diff\"],\n",
     ")\n",
     "\n",
     "# Weight attribution scores by the difference in probabilities\n",
@@ -1212,10 +1210,18 @@
     ")\n",
     "\n",
     "source_without_context = \"Do you already know when you'll be back?\"\n",
-    "source_with_context = \"Thank you for your help, my friend, you really saved my life. Do you already know when you'll be back?\"\n",
+    "source_with_context = (\n",
+    "    \"Thank you for your help, my friend, you really saved my life. Do you already know when you'll be back?\"\n",
+    ")\n",
     "\n",
-    "print(\"Generation without context:\", model.generate(source_without_context, forced_bos_token_id=model.tokenizer.lang_code_to_id[\"it_IT\"]))\n",
-    "print(\"Generation with context:\", model.generate(source_with_context, forced_bos_token_id=model.tokenizer.lang_code_to_id[\"it_IT\"]))\n",
+    "print(\n",
+    "    \"Generation without context:\",\n",
+    "    model.generate(source_without_context, forced_bos_token_id=model.tokenizer.lang_code_to_id[\"it_IT\"]),\n",
+    ")\n",
+    "print(\n",
+    "    \"Generation with context:\",\n",
+    "    model.generate(source_with_context, forced_bos_token_id=model.tokenizer.lang_code_to_id[\"it_IT\"]),\n",
+    ")\n",
     "\n",
     "out = model.attribute(\n",
     "    source_without_context,\n",
@@ -1224,7 +1230,7 @@
     "    contrast_targets=\"Grazie per il tuo aiuto, mi hai davvero salvato la vita. Sai già quando tornerai?\",\n",
     "    attribute_target=True,\n",
     "    # We also visualize the score used as target using the same function as step score\n",
-    "    step_scores=[\"pcxmi\", \"probability\"]\n",
+    "    step_scores=[\"pcxmi\", \"probability\"],\n",
     ")\n",
     "\n",
     "out.show()"
@@ -1336,8 +1342,8 @@
    ],
    "source": [
     "# Print tokens to get token indices\n",
-    "print([(i, x) for i, x in enumerate(model.encode(mt_target, as_targets=True).input_tokens[0])])\n",
-    "print([(i, x) for i, x in enumerate(model.encode(pe_target, as_targets=True).input_tokens[0])])"
+    "print(list(enumerate(model.encode(mt_target, as_targets=True).input_tokens[0])))\n",
+    "print(list(enumerate(model.encode(pe_target, as_targets=True).input_tokens[0])))"
    ]
   },
   {
@@ -1394,7 +1400,7 @@
     "    attributed_fn=\"contrast_prob_diff\",\n",
     "    step_scores=[\"contrast_prob_diff\"],\n",
     "    contrast_targets=pe_target,\n",
-    "    contrast_targets_alignments=[(0,0), (1,1), (2,2), (3,4), (4,4), (5,5), (6,7), (7,9)],\n",
+    "    contrast_targets_alignments=[(0, 0), (1, 1), (2, 2), (3, 4), (4, 4), (5, 5), (6, 7), (7, 9)],\n",
     ")\n",
     "\n",
     "# Reasonable alignments\n",
@@ -1504,8 +1510,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import inseq\n",
     "from transformers import AutoModelForCausalLM, AutoTokenizer\n",
+    "\n",
+    "import inseq\n",
     "\n",
     "# The model is loaded in 8-bit on available GPUs using the bitsandbytes library integrated in HF Transformers\n",
     "# This will make the model much smaller for inference purposes, but attributions are not guaranteed to match those\n",
@@ -1930,15 +1937,16 @@
     }
    ],
    "source": [
-    "from inseq import FeatureAttributionOutput\n",
     "import pandas as pd\n",
+    "\n",
+    "from inseq import FeatureAttributionOutput\n",
     "\n",
     "scores = {}\n",
     "\n",
     "for layer_idx in range(48):\n",
     "    curr_out = FeatureAttributionOutput.load(f\"../data/cat_outputs/layer_{layer_idx}.json\")\n",
     "    out_dict = curr_out.get_scores_dicts(do_aggregation=False)[0]\n",
-    "    scores[layer_idx] = [score for score in out_dict[\"target_attributions\"][\"ĠParis\"].values()][:-1]\n",
+    "    scores[layer_idx] = list(out_dict[\"target_attributions\"][\"ĠParis\"].values())[:-1]\n",
     "\n",
     "prefix_tokens = list(out_dict[\"target_attributions\"][\"ĠParis\"].keys())\n",
     "attributions_df = pd.DataFrame(scores, index=prefix_tokens[:-1])\n",
@@ -1989,7 +1997,7 @@
     "ax.set_xticks([0.5 + i for i in range(0, attributions_df.values.shape[1], 4)])\n",
     "ax.set_xticklabels(list(range(0, 48, 4)))\n",
     "ax.set_yticklabels(attributions_df.index)\n",
-    "cb = plt.colorbar(h, ticks=[0, .15, .3, .45, .6, .75])\n",
+    "cb = plt.colorbar(h, ticks=[0, 0.15, 0.3, 0.45, 0.6, 0.75])\n",
     "fig.suptitle(\"What activations are contributing to predicting 'Paris' over 'Rome'?\")\n",
     "plt.savefig(filename)\n",
     "plt.show()"
